Fix mobile issues

--- a/index.html
+++ b/index.html
@@ -31,21 +31,9 @@
         <script src="assets/js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body id="page-top" data-spy="scroll" data-target=".navbar">
-        
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
-
-        <!-- ========== Preloader ========== -->
-
         <div class="preloader">
           <img src="assets/images/loader.svg" alt="Loading...">
         </div>
-
-
-
-        <!-- ========== Navigation ========== -->
 
         <nav class="navbar navbar-default navbar-fixed-top mega navbar-trans navbar-fw" role="navigation">
           <div class="navbar-header page-scroll">
@@ -59,7 +47,6 @@
             <a class="navbar-brand" href="index.html"><img class="navbar-logo-dark" src="assets/images/logo.png" alt="Definity - Logo"></a>
           </div>
 
-          <!-- Navbar Links -->
           <div id="navbar" class="navbar-collapse collapse page-scroll navbar-right">
             <ul class="nav navbar-nav">
               <li><a href="#home">Kezdőlap<span class="sr-only"></span></a></li>
@@ -144,10 +131,10 @@
                 </ul>
             </div>
             <div class="row">
-                <div id="pfolio" class="mb-15">
+                <div id="pfolio" class="mb-15 pf-box">
 
                     <!-- Item -->
-                    <div class="col-md-4 portfolio-item csaladihaz latvany">
+                    <div class="col-md-4 portfolio-item pf-item csaladihaz latvany">
                         <div class="p-wrapper hover-default">
                             <img src="assets/images/portfolio/09/09.png" alt="Project Example">
                             <div class="p-hover">
@@ -162,7 +149,7 @@
                     </div><!-- / .portfolio-item -->
 
                     <!-- Item -->
-                    <div class="col-md-4 portfolio-item lakas">
+                    <div class="col-md-4 portfolio-item pf-item lakas">
                         <div class="p-wrapper hover-default">
                             <img src="assets/images/portfolio/02/02.jpg" alt="Project Example">
                             <div class="p-hover">
@@ -177,7 +164,7 @@
                     </div><!-- / .portfolio-item -->
 
                     <!-- Item -->
-                    <div class="col-md-4 portfolio-item lakas latvany egyeb">
+                    <div class="col-md-4 portfolio-item pf-item lakas latvany egyeb">
                         <div class="p-wrapper hover-default">
                             <img src="assets/images/portfolio/03/03.jpg" alt="Project Example">
                             <div class="p-hover">
@@ -192,7 +179,7 @@
                     </div><!-- / .portfolio-item -->
 
                     <!-- Item -->
-                    <div class="col-md-4 portfolio-item egyeb lakas">
+                    <div class="col-md-4 portfolio-item pf-item egyeb lakas">
                         <div class="p-wrapper hover-default">
                             <img src="assets/images/portfolio/04/04.png" alt="Project Example">
                             <div class="p-hover">
@@ -207,7 +194,7 @@
                     </div><!-- / .portfolio-item -->
 
                     <!-- Item -->
-                    <div class="col-md-4 portfolio-item hotel egyeb">
+                    <div class="col-md-4 portfolio-item pf-item hotel egyeb">
                         <div class="p-wrapper hover-default">
                             <img src="assets/images/portfolio/05/05.png" alt="Project Example">
                             <div class="p-hover">
@@ -222,7 +209,7 @@
                     </div><!-- / .portfolio-item -->
 
                     <!-- Item -->
-                    <div class="col-md-4 portfolio-item lakas">
+                    <div class="col-md-4 portfolio-item pf-item lakas">
                         <div class="p-wrapper hover-default">
                             <img src="assets/images/portfolio/06/06.jpg" alt="Project Example">
                             <div class="p-hover">
@@ -237,7 +224,7 @@
                     </div><!-- / .portfolio-item -->
 
                     <!-- Item -->
-                    <div class="col-md-4 portfolio-item lakas">
+                    <div class="col-md-4 portfolio-item pf-item lakas">
                         <div class="p-wrapper hover-default">
                             <img src="assets/images/portfolio/07/07.png" alt="Project Example">
                             <div class="p-hover">
@@ -252,7 +239,7 @@
                     </div><!-- / .portfolio-item -->
 
                     <!-- Item -->
-                    <div class="col-md-4 portfolio-item szalon">
+                    <div class="col-md-4 portfolio-item pf-item szalon">
                         <div class="p-wrapper hover-default">
                             <img src="assets/images/portfolio/08/08.jpg" alt="Project Example">
                             <div class="p-hover">
@@ -267,7 +254,7 @@
                     </div><!-- / .portfolio-item -->
 
                     <!-- Item -->
-                    <div class="col-md-4 portfolio-item egyeb csaladihaz latvany">
+                    <div class="col-md-4 portfolio-item pf-item egyeb csaladihaz latvany">
                         <div class="p-wrapper hover-default">
                             <img src="assets/images/portfolio/01/01.jpg" alt="Project Example">
                             <div class="p-hover">
