--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 
                 <header class="sec-heading">
                     <h2>Szolgáltatásaink</h2>
-                    <span class="subheading">Ha építkezés, felújítás, átalakítás, ingatlan/helyiség bérbeadás, eladás vagy vétel előtt állsz, mindenképpen keress meg! Rengeteg pénzt és bosszúságot spórolhatok meg neked! </span>
+                    <span class="subheading">Építkezés, átalakítást tervezel vagy adás-vétel előtt állsz? Egyeztessünk! Rengeteg pénzt és bosszúságot spórolhatsz velem! </span>
                 </header>
 
                 <div class="row">
@@ -301,7 +301,7 @@
                     <div class="col-md-3 col-sm-6 mb-sm-50 ft-item ft-dark-spin wow zoomIn" data-wow-duration=".6s">
                         <span class="et-pictures"></span>
                         <h5>Látványterv készítés</h5>
-                        <p>Külső és belső színes 3D látványtervek készítése, melyek segítségével vizuálisan segítik az elképzelések, tervek megjelenítését.</p>
+                        <p>Külső és belső színes 3D látványtervek készítése, melyek vizuálisan segítik az elképzelések, tervek megjelenítését.</p>
                     </div>
 
                     <!-- Item 4 -->
@@ -364,12 +364,11 @@
                 <div class="col-lg-4">
                     <h4>Rólam</h4>
                     <p>
-                        Belsőépítészként én nem csak a helyiségek adottságait használom, de alakítom azokat. Ha szükséges falakat mozgatok, tereket helyezek át, funkciókat cserélek fel, majd ezeket megtöltöm tartalommal, színekkel, anyagokkal, dekorációval, fénnyel, minden olyan elemmel, amitől egy ház otthonná válik. Persze nem csak otthonokat teremtek, ugyanezt teszem egy étterem, kávézó, múzeum, üzlet vagy szálloda esetében is, a különbség a megrendelői igény, funkció, célcsoport, lépték, és természetesen a felhasznált anyagok között van.
-
-                        A munkám szerteágazó ismeretet követel, szükséges a naprakész építészeti alapismeret, bútor tervezéshez némi faipari ismeret, naprakész rálátás a hazai is nemzetközi design trendekre, termékekre. Tudnom kell alkalmazni a szakági tervezők (gépész, statikus, elektromos tervező, grafikus, web szerkesztő, stb.) tudását, hisz adott esetben nekem kell összefognom az ő munkájukat is, hasonlóan az építészhez.
-
-                        És mi tesz különlegessé? A szakmai tudásom, biztos stílusérzékem, remek kommunikációs készségem, valamint, hogy minden munkáim során az ügyfél az első. A végeredményt mindig együtt alakítjuk.
-
+                        Belsőépítészként nem csak a helyiségek adottságait használom, de alakítom azokat.
+                        Ha szükséges falakat mozgatok, tereket helyezek át, funkciókat cserélek fel, majd ezeket megtöltöm tartalommal, színekkel, anyagokkal, dekorációval, legyen az az otthonod, egy étterem, kávézó, múzeum, üzlet vagy szálloda.
+                        A munkám szerteágazó ismeretet követel, szükséges a naprakész építészeti alapismeret, bútor tervezéshez némi faipari ismeret, rálátás a hazai is nemzetközi design trendekre, termékekre.
+                        Tudnom kell alkalmazni a szakági tervezők tudását, hisz adott esetben nekem kell összefognom az ő munkájukat is. És mi tesz különlegessé?
+                        A szakmai tudásom, biztos stílusérzékem, remek kommunikációs készsége és a mögöttem álló lelkes csapat. A végeredményt mindig együtt alakítjuk.
                     </p>
                 </div>
 
